--- a/styles/style.css
+++ b/styles/style.css
@@ -347,3 +347,39 @@ input[type="number"], select {
         text-align: left;
     }
 }
+
+
+@media (max-width: 768px) {
+    .content-wrapper {
+        flex-direction: column;
+    }
+
+    .menu-toggle {
+        display: block;
+        position: absolute;
+        left: 1rem;
+        top: 1rem;
+    }
+
+    .sidebar {
+        position: fixed;
+        left: -250px;
+        top: 0;
+        height: 100%;
+        width: 250px;
+        transition: left 0.3s ease;
+        z-index: 1000;
+    }
+
+    .sidebar.active {
+        left: 0;
+    }
+
+    .main-content, .references {
+        width: 100%;
+    }
+
+    .header h1 {
+        margin-left: 3rem;
+    }
+}
